feat: introduce domain-specific exceptions